remove obsolete jvm configuration from project.clj